Change: change version MySQLDIALECT

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto:update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 ## Mensajes de error
 spring.jpa.defer-datasource-initialization=true
