--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,4 @@ spring.datasource.password=${MYSQLPASSWORD}
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+springdoc.swagger-ui.url=/open-api.json
